Archive2/d0/4f949c1ce34c3b/output
In file included from /usr/local/include/c++/4.9.0/algorithm:61:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.0/bits/stl_algobase.h: In instantiation of '_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = false; _II = iterator<int>; _OI = std::ostream_iterator<int>]':
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:434:38:   required from '_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = false; _II = iterator<int>; _OI = std::ostream_iterator<int>]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:466:17:   required from '_OI std::copy(_II, _II, _OI) [with _II = iterator<int>; _OI = std::ostream_iterator<int>]'
main.cpp:35:79:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:387:57: error: no type named 'value_type' in 'struct std::iterator_traits<iterator<int> >'
       typedef typename iterator_traits<_II>::value_type _ValueTypeI;
                                                         ^
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:389:64: error: no type named 'iterator_category' in 'struct std::iterator_traits<iterator<int> >'
       typedef typename iterator_traits<_II>::iterator_category _Category;
                                                                ^
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:393:9: error: no type named 'value_type' in 'struct std::iterator_traits<iterator<int> >'
         && __are_same<_ValueTypeI, _ValueTypeO>::__value);
         ^
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:396:70: error: no type named 'iterator_category' in 'struct std::iterator_traits<iterator<int> >'
                        _Category>::__copy_m(__first, __last, __result);
                                                                      ^
/usr/local/include/c++/4.9.0/bits/stl_algobase.h: In instantiation of '_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = false; _II = iterator<unsigned int>; _OI = std::ostream_iterator<unsigned int>]':
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:434:38:   required from '_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = false; _II = iterator<unsigned int>; _OI = std::ostream_iterator<unsigned int>]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:466:17:   required from '_OI std::copy(_II, _II, _OI) [with _II = iterator<unsigned int>; _OI = std::ostream_iterator<unsigned int>]'
main.cpp:38:84:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:387:57: error: no type named 'value_type' in 'struct std::iterator_traits<iterator<unsigned int> >'
       typedef typename iterator_traits<_II>::value_type _ValueTypeI;
                                                         ^
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:389:64: error: no type named 'iterator_category' in 'struct std::iterator_traits<iterator<unsigned int> >'
       typedef typename iterator_traits<_II>::iterator_category _Category;
                                                                ^
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:393:9: error: no type named 'value_type' in 'struct std::iterator_traits<iterator<unsigned int> >'
         && __are_same<_ValueTypeI, _ValueTypeO>::__value);
         ^
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:396:70: error: no type named 'iterator_category' in 'struct std::iterator_traits<iterator<unsigned int> >'
                        _Category>::__copy_m(__first, __last, __result);
                                                                      ^
